[Offline Pages] Gates immediate triggering (non scheduled) of background loading by whether low end device. Makes unit tests conditional on this check - ran unit tests on both svelte and regular devices locally.

BUG=646888

Review-Url: https://codereview.chromium.org/2338313002
Cr-Commit-Position: refs/heads/master@{#418622}