components/offline_pages/background/request_coordinator.cc
@@ -12,6 +12,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "base/logging.h"
 #include "base/metrics/histogram_macros.h"
 #include "base/rand_util.h"
+#include "base/sys_info.h"
 #include "base/time/time.h"
 #include "components/offline_pages/background/offliner_factory.h"
 #include "components/offline_pages/background/offliner_policy.h"
@@ -372,6 +373,9 @@ bool RequestCoordinator::StartProcessing(
 void RequestCoordinator::StartProcessingIfConnected() {
   // Makes sure not already busy processing.
   if (is_busy_) return;
+
+  // Make sure we are not on svelte device to start immediately.
+  if (base::SysInfo::IsLowEndDevice()) return;
 
   // Check for network connectivity.
   net::NetworkChangeNotifier::ConnectionType connection = GetConnectionType();
